--- a/movie1.html
+++ b/movie1.html
@@ -3,12 +3,16 @@
 <head>
 <title>Watch Movie</title>
 </head>
+
 <body style="background:black;color:white;text-align:center">
 
 <h2>Night of the Living Dead</h2>
 
-<iframe width="90%" height="400"
+<iframe
 src="https://archive.org/embed/night_of_the_living_dead"
+width="90%"
+height="450"
+frameborder="0"
 allowfullscreen>
 </iframe>
 
